@@ -1,3 +1,8 @@
+2010-01-19  Jb Evain  <jbevain@novell.com>
+
+	* DisposableTypesShouldHaveFinalizerTest.cs: add test for generated
+	types closing on a native field.
+
 2009-12-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DisposableTypesShouldHaveFinalizerTest.cs: Add test cases for 
