@@ -1,3 +1,8 @@
+2010-01-19  Jb Evain  <jbevain@novell.com>
+
+	* DisposableTypesShouldHaveFinalizerRule.cs: the rule
+	does not apply on generated types such as generators.
+
 2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AttributeArgumentsShouldHaveAccessorsRule.cs: Avoid boxing 
